--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/home">view1</a></li>
-    <li><a href="#/settings">view2</a></li>
-  </ul>
+
+  <navbar></navbar>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -34,6 +33,12 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
+
+  <!-- Global -->
+  <script src="global/global.js"></script>
+  <script src="global/directives/navbar/navbar.js"></script>
+
+  <!-- Areas -->
   <script src="home/home.js"></script>
   <script src="settings/settings.js"></script>
   <script src="components/version/version.js"></script>
