Disabled sliding transition for sidebar. Set up navigation menu with demo links. Added empty animations.css file.

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/rdash.css">
+    <link rel="stylesheet" href="css/animations.css">
 
     <!-- Angular -->
     <script src="bower_components/angular/angular.js"></script>
@@ -48,29 +49,15 @@
             </li>
             <li class="sidebar-title"><span>NAVIGATION</span></li>
             <li class="sidebar-list">
-                <a href="#">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
+                <a href="#/dashboard">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
             </li>
             <li class="sidebar-list">
-                <a href="#/tables">Tables <span class="menu-icon fa fa-table"></span></a>
+                <a href="#/notifications">Notifications <span class="menu-icon fa fa-bell"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a href="#/preferences">Preferences <span class="menu-icon fa fa-cog"></span></a>
             </li>
         </ul>
-        <div class="sidebar-footer">
-            <div class="col-xs-4">
-                <a href="https://github.com/rdash/rdash-angular" target="_blank">
-                    Github
-                </a>
-            </div>
-            <div class="col-xs-4">
-                <a href="https://github.com/rdash/rdash-angular/README.md" target="_blank">
-                    About
-                </a>
-            </div>
-            <div class="col-xs-4">
-                <a href="#">
-                    Support
-                </a>
-            </div>
-        </div>
     </div>
     <!-- End Sidebar -->
 
