--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/rdash.css">
     <link rel="stylesheet" href="css/animations.css">
@@ -32,6 +31,7 @@
     <!-- Areas -->
     <script src="dashboard/dashboard.js"></script>
     <script src="dashboard/controllers/dashboardCtrl.js"></script>
+    <script src="dashboard/controllers/mainCtrl.js"></script>
     <script src="dashboard/controllers/alertsCtrl.js"></script>
 
 </head>
