Set up multiple routes.

--- a/app/index.html
+++ b/app/index.html
@@ -30,11 +30,13 @@
 
     <!-- Areas -->
     <script src="dashboard/dashboard.js"></script>
+    <script src="dashboard/controllers/mainCtrl.js"></script>
     <script src="dashboard/controllers/dashboardCtrl.js"></script>
+    <script src="dashboard/controllers/notificationsCtrl.js"></script>
     <script src="dashboard/controllers/alertsCtrl.js"></script>
 
 </head>
-<body ng-controller="DashboardCtrl">
+<body ng-controller="MainCtrl">
 <div id="page-wrapper" ng-class="{'open': toggle}" ng-cloak>
 
     <!-- Sidebar -->
