Added preferences route. Brought back dashboard template.

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
     <script src="dashboard/controllers/mainCtrl.js"></script>
     <script src="dashboard/controllers/dashboardCtrl.js"></script>
     <script src="dashboard/controllers/notificationsCtrl.js"></script>
+    <script src="dashboard/controllers/preferencesCtrl.js"></script>
     <script src="dashboard/controllers/alertsCtrl.js"></script>
 
 </head>
