--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
     <script src="dashboard/controllers/notificationsCtrl.js"></script>
     <script src="dashboard/controllers/preferencesCtrl.js"></script>
     <script src="dashboard/controllers/alertsCtrl.js"></script>
+    <script src="dashboard/controllers/charitiesCtrl.js"></script>
 
 </head>
 <body ng-controller="MainCtrl">
@@ -76,7 +77,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li class="dropdown-header">
-                                    Joe Bloggs
+                                    Kevin Weeks
                                 </li>
                                 <li class="divider"></li>
                                 <li class="link">
@@ -86,12 +87,7 @@
                                 </li>
                                 <li class="link">
                                     <a href="#">
-                                        Menu Item
-                                    </a>
-                                </li>
-                                <li class="link">
-                                    <a href="#">
-                                        Menu Item
+                                        Preferences
                                     </a>
                                 </li>
                                 <li class="divider"></li>
@@ -112,7 +108,7 @@
                                 </li>
                                 <li class="divider"></li>
                                 <li>
-                                    <a href="#">Server Down!</a>
+                                    <a href="#">! New Friend Request</a>
                                 </li>
                             </ul>
                         </div>
