Added following list to dashboard.

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/rdash.css">
+    <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/animations.css">
 
     <!-- Angular -->
@@ -36,6 +36,7 @@
     <script src="dashboard/controllers/preferencesCtrl.js"></script>
     <script src="dashboard/controllers/alertsCtrl.js"></script>
     <script src="dashboard/controllers/charitiesCtrl.js"></script>
+    <script src="dashboard/controllers/followingCtrl.js"></script>
 
 </head>
 <body ng-controller="MainCtrl">
