Set up sidebar to pop in and out. Added notifications page. Set up breadcrumbs with proper titles.

--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@
                                 </li>
                                 <li class="divider"></li>
                                 <li>
-                                    <a href="#">! New Friend Request</a>
+                                    <a href="#">1 New Friend Request</a>
                                 </li>
                             </ul>
                         </div>
@@ -119,7 +119,7 @@
                             Dashboard
                         </div>
                         <div class="breadcrumb-links">
-                            Home / Dashboard
+                            Home / {{page}}
                         </div>
                     </div>
                 </div>
