--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
 
     <!-- Main Module-->
     <script src="app.js"></script>
