Set up animations for ngView, ngInclude, naif, ngSwitch and ngRepeat.

--- a/app/index.html
+++ b/app/index.html
@@ -128,7 +128,7 @@
             <!-- End Header Bar -->
 
             <!-- Main Content -->
-            <div ng-view></div>
+            <div ng-view ng-animate-children></div>
 
         </div><!-- End Page Content -->
     </div><!-- End Content Wrapper -->
