--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="css/rdash.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="bower_components/animate.css/animate.css">
+
+    <!-- Vendor Libs -->
+    <script src="bower_components/gsap/src/minified/TweenMax.min.js"></script>
 
     <!-- Angular -->
     <script src="bower_components/angular/angular.js"></script>
@@ -28,6 +33,8 @@
     <script src="global/directives/widget-body.js"></script>
     <script src="global/directives/widget-footer.js"></script>
     <script src="global/directives/widget-header.js"></script>
+    <script src="global/directives/alert.js"></script>
+    <script src="global/animations.js"></script>
 
     <!-- Areas -->
     <script src="dashboard/dashboard.js"></script>
