End of Module 4

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,9 @@
     <!-- Main Module-->
     <script src="app.js"></script>
 
+    <!-- Vendor Libs -->
+    <script src="vendor/TweenMax.js"></script>
+
     <!-- Global -->
     <script src="global/global.js"></script>
     <script src="global/directives/loading.js"></script>
